--- a/nycfare.ipynb
+++ b/nycfare.ipynb
@@ -2,44 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pbren\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "C:\\Users\\pbren\\Anaconda3\\lib\\site-packages\\sklearn\\grid_search.py:42: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Handle table-like data and matrices\n",
+    "# Data manipulation packages\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "# Perform computations\n",
-    "from math import floor\n",
-    "\n",
-    "# Modelling Algorithms\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier, AdaBoostClassifier\n",
-    "from sklearn.grid_search import ParameterGrid\n",
-    "import xgboost\n",
-    "\n",
-    "# Modelling Helpers\n",
-    "from sklearn.preprocessing import Imputer , Normalizer , scale\n",
-    "from sklearn.cross_validation import train_test_split , StratifiedKFold, KFold\n",
-    "from sklearn.feature_selection import RFECV\n",
-    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# Visualization\n",
     "import seaborn as sns\n",
